--- a/index.html
+++ b/index.html
@@ -1,95 +1,256 @@
 <body class="bg-gray-100 min-h-screen flex flex-col justify-center items-center text-center">
-  <div class="mb-6">
-    <a href="https://www.ifwl.net" target="_blank">
-      <img src="./ifwl_logo.png" alt="IFWL Logo" class="w-32 h-32 object-contain mx-auto">
-    </a>
-  </div>
-  <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
-    <h1 class="text-2xl font-bold mb-4">ACC Driver Classification</h1>
-    <form id="classificationForm" class="space-y-4">
-      <input type="text" id="driverName" placeholder="Driver Name" class="w-full p-2 border rounded" required />
+<div class="mb-6">
+<a href="https://www.ifwl.net" target="_blank">
+<img src="./ifwl_logo.png" alt="IFWL Logo" class="w-32 h-32 object-contain mx-auto">
+</a>
+</div>
+<div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
+<h1 class="text-2xl font-bold mb-4">ACC Driver Classification</h1>
+<form id="classificationForm" class="space-y-4">
+<input type="text" id="driverName" placeholder="Driver Name" class="w-full p-2 border rounded" required />
 
-      <select id="track" class="w-full p-2 border rounded" required>
-        <option value="">Select Track</option>
-        <option>Monza</option>
-        <option>Spa Francorchamps</option>
-        <option>Silverstone</option>
-        <option>Nurburgring GP</option>
-        <option>Barcelona</option>
-        <option>Zandvoort</option>
-        <option>Suzuka</option>
-        <option>Paul Ricard</option>
-        <option>Imola</option>
-        <option>Mount Panorama</option>
-        <option>Misano</option>
-        <option>Kyalami</option>
-        <option>Brands Hatch</option>
-        <option>Donnington Park</option>
-        <option>Valencia</option>
-        <option>Laguna Seca</option>
-        <option>Watkins Glen</option>
-        <option>Zolder</option>
-        <option>Red Bull Ring</option>
-        <option>Hungaroring</option>
-        <option>Nurburgring Nordchleiffe</option>
-      </select>
+<select id="track" class="w-full p-2 border rounded" required>
+<option value="">Select Track</option>
+<option>Monza</option>
+<option>Spa Francorchamps</option>
+<option>Silverstone</option>
+<option>Nurburgring GP</option>
+<option>Barcelona</option>
+<option>Zandvoort</option>
+<option>Suzuka</option>
+<option>Paul Ricard</option>
+<option>Imola</option>
+<option>Mount Panorama</option>
+<option>Misano</option>
+<option>Kyalami</option>
+<option>Brands Hatch</option>
+<option>Donnington Park</option>
+<option>Valencia</option>
+<option>Laguna Seca</option>
+<option>Watkins Glen</option>
+<option>Zolder</option>
+<option>Red Bull Ring</option>
+<option>Hungaroring</option>
+<option>Nurburgring Nordchleiffe</option>
+</select>
 
-      <select id="carClass" class="w-full p-2 border rounded" required>
-        <option value="">Select Car Class</option>
-        <option value="GT3">GT3</option>
-        <option value="GT4">GT4</option>
-      </select>
+<select id="carClass" class="w-full p-2 border rounded" required>
+<option value="">Select Car Class</option>
+<option value="GT3">GT3</option>
+<option value="GT4">GT4</option>
+</select>
 
-      <label for="weather" class="block text-left text-sm font-medium text-gray-700">Weather</label>
-      <select id="weather" class="w-full p-2 border rounded" required onchange="document.getElementById('weatherNote').style.display = this.value === 'wet' ? 'block' : 'none';">
-        <option value="dry">Dry</option>
-        <option value="wet">Wet</option>
-      </select>
+<label for="weather" class="block text-left text-sm font-medium text-gray-700">Weather</label>
+<select id="weather" class="w-full p-2 border rounded" required onchange="document.getElementById('weatherNote').style.display = this.value === 'wet' ? 'block' : 'none';">
+<option value="dry">Dry</option>
+<option value="wet">Wet</option>
+</select>
 
-      <input type="text" id="lapTime" placeholder="Lap Time (e.g. 1:47.382)" class="w-full p-2 border rounded" required pattern="^[0-9]:[0-5][0-9]\.[0-9]{3}$" title="Please enter time in the format m:ss.sss (e.g. 1:47.382)" />
+<input type="text" id="lapTime" placeholder="Lap Time (e.g. 1:47.382)" class="w-full p-2 border rounded" required pattern="^[0-9]:[0-5][0-9]\.[0-9]{3}$" title="Please enter time in the format m:ss.sss (e.g. 1:47.382)" />
 
-      <p id="weatherNote" class="text-sm text-blue-600 mt-1 hidden">Note: Wet weather adds a 5% buffer to your lap time for fairer classification.</p>
+<p id="weatherNote" class="text-sm text-blue-600 mt-1 hidden">Note: Wet weather adds a 5% buffer to your lap time for fairer classification.</p>
 
-      <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Classify Me</button>
-    </form>
+<button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Classify Me</button>
+</form>
 
-    <p class="text-sm text-gray-600 mt-6">These times are tailored to IFWL.NET racing league – this league runs a LFM BOP. Times may vary for other leagues. Use this as a base.</p>
+<p class="text-sm text-gray-600 mt-6">These times are tailored to IFWL.NET racing league – this league runs a LFM BOP. Times may vary for other leagues. Use this as a base.</p>
 
-    <div id="result" class="mt-4 text-lg font-semibold"></div>
+<div id="result" class="mt-4 text-lg font-semibold"></div>
 
-    <div id="simgridPromo" class="mt-6 hidden bg-gray-800 p-4 rounded-lg">
-      <a href="https://www.thesimgrid.com/communities/ifwl" target="_blank">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU9g8cfuSLVQToXqGY4VHMhIsTNT7WTEJ7Bw&s" alt="Join IFWL on SimGrid" class="mx-auto h-16">
-      </a>
-    </div>
-  </div>
+<div id="simgridPromo" class="mt-6 hidden bg-gray-800 p-4 rounded-lg">
+<a href="https://www.thesimgrid.com/communities/ifwl" target="_blank">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU9g8cfuSLVQToXqGY4VHMhIsTNT7WTEJ7Bw&s" alt="Join IFWL on SimGrid" class="mx-auto h-16">
+</a>
+</div>
 
-  <button onclick="downloadCSV()" class="mt-4 bg-green-600 text-white p-2 rounded hover:bg-green-700">
-    Download Submissions CSV
-  </button>
+</div>
+
+<button onclick="downloadCSV()" class="mt-4 bg-green-600 text-white p-2 rounded hover:bg-green-700">
+Download Submissions CSV
+</button>
+
 <script>
-const classificationData = {
-  "Monza": { "GT3": ["1:53.71", "1:51.71", "1:49.71", "1:47.71", "1:45.70"] },
-  "Spa Francorchamps": { "GT3": ["2:24.89", "2:21.50", "2:18.50", "2:16.00", "2:13.00"] },
-  "Silverstone": { "GT3": ["2:04.47", "2:02.47", "2:00.47", "1:58.47", "1:56.47"] },
-  "Nurburgring GP": { "GT3": ["2:00.10", "1:58.10", "1:56.10", "1:54.10", "1:52.10"] },
-  "Barcelona": { "GT3": ["1:49.60", "1:47.60", "1:45.60", "1:43.60", "1:41.60"] },
-  "Zandvoort": { "GT3": ["1:41.50", "1:39.50", "1:37.50", "1:35.50", "1:33.50"] },
-  "Suzuka": { "GT3": ["2:06.27", "2:04.27", "2:02.27", "2:00.27", "1:58.27"] },
-  "Paul Ricard": { "GT3": ["1:59.90", "1:57.90", "1:55.90", "1:53.90", "1:51.90"] },
-  "Imola": { "GT3": ["1:46.97", "1:44.97", "1:42.97", "1:40.97", "1:38.97"] },
-  "Mount Panorama": { "GT3": ["2:07.85", "2:05.85", "2:03.85", "2:01.85", "1:59.85"] },
-  "Misano": { "GT3": ["1:39.59", "1:37.59", "1:35.59", "1:33.59", "1:31.59"] },
-  "Kyalami": { "GT3": ["1:47.72", "1:45.72", "1:43.72", "1:41.72", "1:39.72"] },
-  "Brands Hatch": { "GT3": ["1:29.30", "1:27.30", "1:25.30", "1:23.30", "1:21.30"] },
-  "Donnington Park": { "GT3": ["1:32.99", "1:30.99", "1:28.99", "1:26.99", "1:24.99"] },
-  "Valencia": { "GT3": ["1:36.47", "1:34.47", "1:32.47", "1:30.47", "1:28.47"] },
-  "Laguna Seca": { "GT3": ["1:28.42", "1:26.42", "1:24.42", "1:22.42", "1:20.42"] },
-  "Watkins Glen": { "GT3": ["1:50.51", "1:48.51", "1:46.51", "1:44.51", "1:42.51"] },
-  "Zolder": { "GT3": ["1:33.31", "1:31.31", "1:29.31", "1:27.31", "1:25.31"] },
-  "Red Bull Ring": { "GT3": ["1:33.00", "1:31.00", "1:29.00", "1:27.00", "1:25.00"] },
-  "Hungaroring": { "GT3": ["1:48.10", "1:46.10", "1:44.10", "1:42.10", "1:40.10"] },
-  "Nurburgring Nordchleiffe": { "GT3": ["8:24.34", "8:22.34", "8:20.34", "8:18.34", "8:16.34"] }
+const submissionLog = [];
+document.getElementById("simgridPromo").classList.add("hidden");
+
+function timeToSeconds(timeStr) {
+const [min, sec] = timeStr.split(":");
+return parseInt(min) * 60 + parseFloat(sec);
+}
+
+function classify(track, carClass, lapTime) {
+const weather = document.getElementById("weather").value;
+const rainImpact = weather === "wet" ? 1.05 : 1;
+if (!classificationData[track] || !classificationData[track][carClass]) return "No data for selected track/class";
+const rawThresholds = classificationData[track][carClass].map(timeToSeconds);
+      const fastest = rawThresholds[rawThresholds.length - 1];
+      const proLine = fastest * 1.02;
+      const highAmLine = proLine + 0.02;
+      const amLine = highAmLine + 0.02;
+      const beginnerLine = amLine + 0.02;
+      const requireImprovement = beginnerLine + 0.02;
+      const thresholds = [requireImprovement, beginnerLine, amLine, highAmLine, proLine, fastest];
+      const alien = rawThresholds[rawThresholds.length - 1];
+      const pro = alien * 1.02 + 0.01;
+      const highAm = pro + 0.01;
+      const am = highAm + 0.01;
+      const beginner = am + 0.01;
+      const requireImprovement = beginner + 0.01;
+      const unrealistic = alien * 0.95;
+      const thresholds = [unrealistic, requireImprovement, beginner, am, highAm, pro, alien];
+const userTime = timeToSeconds(lapTime) / rainImpact;
+const classes = [
+  "unrealistic - please check your time entry",
+"require improvement - this time is too slow to classify",
+"beginner - IFWL.NET Beginner series is ideal for you",
+"AM - IFWL.NET Pro - am series is ideal for you",
+"high end - AM - IFWL.NET Pro - am series is ideal for you",
+"Pro - IFWL.NET Pro am may suit your race pace",
+"Alien - consider getting a real race car ! :) "
+];
+for (let i = 0; i < thresholds.length; i++) {
+if (userTime <= thresholds[i]) return classes[i];
+}
+return "Alien";
+}
+
+document.getElementById("classificationForm").addEventListener("submit", function (e) {
+e.preventDefault();
+const track = document.getElementById("track").value;
+const carClass = document.getElementById("carClass").value;
+const lapTime = document.getElementById("lapTime").value.trim();
+const weather = document.getElementById("weather").value;
+const rainImpact = weather === "wet" ? 1.05 : 1;
+
+const thresholds = classificationData[track][carClass].map(timeToSeconds);
+const fastestAllowedTime = thresholds[0];
+const bufferTime = fastestAllowedTime * 0.95;
+const userTime = timeToSeconds(lapTime) / rainImpact;
+
+if (userTime < bufferTime) {
+document.getElementById("result").textContent = "⚠️ This time is deemed unrealistic. Please check your entry.";
+document.getElementById("result").classList.add("text-red-600");
+return;
+} else {
+const result = classify(track, carClass, lapTime);
+document.getElementById("result").classList.remove("text-red-600");
+
+const resultIndex = [
+          "Rookie",
+          "require improvement",
+          "beginner",
+"AM",
+"high end - AM",
+"Pro",
+"Alien"
+].indexOf(result.split(" - ")[0]);
+
+const classCount = 5;
+const proThreshold = thresholds[classCount - 2];
+const highAmThreshold = thresholds[classCount - 3];
+const amThreshold = thresholds[classCount - 4];
+
+let comparisonText = "";
+
+// Pro
+const deltaToPro = (userTime - proThreshold).toFixed(3);
+if (resultIndex === 3) {
+comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current Pro threshold for your pace.`;
+} else {
+comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
+}
+
+// High-end AM
+const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
+if (resultIndex === 2) {
+comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current High-end AM threshold for your pace.`;
+} else {
+comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
+}
+
+// AM
+const deltaToAm = (userTime - amThreshold).toFixed(3);
+if (resultIndex === 1) {
+comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current AM threshold for your pace.`;
+} else {
+comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
+}
+
+document.getElementById("result").innerHTML = `<strong>You're classified as:</strong> ${result}${comparisonText}<br><br><span class='text-sm text-blue-700 italic'>🧠 Want to level up? Focus on one sector per session. Small gains = big wins!</span>`;
+document.getElementById("simgridPromo").classList.remove("hidden");
+
+const entry = {
+name: document.getElementById("driverName").value,
+track,
+carClass,
+lapTime,
+weather,
+result
 };
+
+submissionLog.push(entry);
+
+// Send to Google Sheets
+fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
+method: "POST",
+mode: "no-cors",
+body: JSON.stringify(entry),
+headers: {
+"Content-Type": "application/json"
+}
+})
+.then(() => {
+alert("✅ Entry submitted to Google Sheets.");
+})
+.catch(error => {
+console.error("❌ Failed to save entry:", error);
+alert("❌ Failed to save to Google Sheets. Please try again later.");
+});
+}
+});
+
+function downloadCSV() {
+const password = prompt("Enter password to download submissions:");
+if (password !== "69420") {
+alert("Incorrect password. Access denied.");
+return;
+}
+
+const headers = "Driver Name,Track,Car Class,Lap Time,Weather,Result\n";
+const rows = submissionLog.map(entry => `${entry.name},${entry.track},${entry.carClass},${entry.lapTime},${entry.weather},${entry.result}`).join("\n");
+const blob = new Blob([headers + rows], { type: "text/csv" });
+const url = URL.createObjectURL(blob);
+const a = document.createElement("a");
+a.href = url;
+a.download = "ifwl_submissions.csv";
+a.click();
+URL.revokeObjectURL(url);
+}
+
+const classificationData = {
+"Monza": { "GT3": ["1:53.7", "1:51.7", "1:49.7", "1:47.7", "1:45.7"] },
+"Spa Francorchamps": { "GT3": ["2:23.0", "2:21.0", "2:19.0", "2:17.0", "2:15.0"] },
+"Silverstone": { "GT3": ["2:04.437", "2:02.437", "2:00.437", "1:58.437", "1:56.437"] },
+"Nurburgring GP": { "GT3": ["2:00.1", "1:58.1", "1:56.1", "1:54.1", "1:52.1"] },
+"Barcelona": { "GT3": ["1:49.6", "1:47.6", "1:45.6", "1:43.6", "1:41.6"] },
+"Zandvoort": { "GT3": ["1:41.5", "1:39.5", "1:37.5", "1:35.5", "1:33.5"] },
+"Suzuka": { "GT3": ["2:06.270", "2:04.270", "2:02.270", "2:00.270", "1:58.270"] },
+"Paul Ricard": { "GT3": ["1:59.9", "1:57.9", "1:55.9", "1:53.9", "1:51.9"] },
+"Imola": { "GT3": ["1:46.972", "1:44.972", "1:42.972", "1:40.972", "1:38.972"] },
+"Mount Panorama": { "GT3": ["2:07.847", "2:05.847", "2:03.847", "2:01.847", "1:59.847"] },
+"Misano": { "GT3": ["1:39.592", "1:37.592", "1:35.592", "1:33.592", "1:31.592"] },
+"Kyalami": { "GT3": ["1:47.720", "1:45.720", "1:43.720", "1:41.720", "1:39.720"] },
+"Brands Hatch": { "GT3": ["1:29.300", "1:27.300", "1:25.300", "1:23.300", "1:21.300"] },
+"Donnington Park": { "GT3": ["1:32.991", "1:30.991", "1:28.991", "1:26.991", "1:24.991"] },
+"Valencia": { "GT3": ["1:36.475", "1:34.475", "1:32.475", "1:30.475", "1:28.475"] },
+"Laguna Seca": { "GT3": ["1:28.427", "1:26.427", "1:24.427", "1:22.427", "1:20.427"] },
+"Watkins Glen": { "GT3": ["1:50.510", "1:48.510", "1:46.510", "1:44.510", "1:42.510"] },
+"Zolder": { "GT3": ["1:33.307", "1:31.307", "1:29.307", "1:27.307", "1:25.307"] },
+"Red Bull Ring": { "GT3": ["1:33.000", "1:31.000", "1:29.000", "1:27.000", "1:25.000"] },
+"Hungaroring": { "GT3": ["1:48.105", "1:46.105", "1:44.105", "1:42.105", "1:40.105"] },
+"Nurburgring Nordchleiffe": { "GT3": ["8:24.347", "8:22.347", "8:20.347", "8:18.347", "8:16.347"] }
+};
+
 </script>
 </body>
+</html>
