--- a/index.html
+++ b/index.html
@@ -69,10 +69,30 @@
   </button>
 
 <script>
-// Your classification data, class list, and logic
 const classificationData = {
-  // ... all your track/class lap time data as before ...
+  "Monza": { "GT3": ["1:53.7", "1:51.7", "1:49.7", "1:47.7", "1:45.7"] },
+  "Spa Francorchamps": { "GT3": ["2:23.0", "2:21.0", "2:19.0", "2:17.0", "2:15.0"] },
+  "Silverstone": { "GT3": ["2:04.437", "2:02.437", "2:00.437", "1:58.437", "1:56.437"] },
+  "Nurburgring GP": { "GT3": ["2:00.1", "1:58.1", "1:56.1", "1:54.1", "1:52.1"] },
+  "Barcelona": { "GT3": ["1:49.6", "1:47.6", "1:45.6", "1:43.6", "1:41.6"] },
+  "Zandvoort": { "GT3": ["1:41.5", "1:39.5", "1:37.5", "1:35.5", "1:33.5"] },
+  "Suzuka": { "GT3": ["2:06.270", "2:04.270", "2:02.270", "2:00.270", "1:58.270"] },
+  "Paul Ricard": { "GT3": ["1:59.9", "1:57.9", "1:55.9", "1:53.9", "1:51.9"] },
+  "Imola": { "GT3": ["1:46.972", "1:44.972", "1:42.972", "1:40.972", "1:38.972"] },
+  "Mount Panorama": { "GT3": ["2:07.847", "2:05.847", "2:03.847", "2:01.847", "1:59.847"] },
+  "Misano": { "GT3": ["1:39.592", "1:37.592", "1:35.592", "1:33.592", "1:31.592"] },
+  "Kyalami": { "GT3": ["1:47.720", "1:45.720", "1:43.720", "1:41.720", "1:39.720"] },
+  "Brands Hatch": { "GT3": ["1:29.300", "1:27.300", "1:25.300", "1:23.300", "1:21.300"] },
+  "Donnington Park": { "GT3": ["1:32.991", "1:30.991", "1:28.991", "1:26.991", "1:24.991"] },
+  "Valencia": { "GT3": ["1:36.475", "1:34.475", "1:32.475", "1:30.475", "1:28.475"] },
+  "Laguna Seca": { "GT3": ["1:28.427", "1:26.427", "1:24.427", "1:22.427", "1:20.427"] },
+  "Watkins Glen": { "GT3": ["1:50.510", "1:48.510", "1:46.510", "1:44.510", "1:42.510"] },
+  "Zolder": { "GT3": ["1:33.307", "1:31.307", "1:29.307", "1:27.307", "1:25.307"] },
+  "Red Bull Ring": { "GT3": ["1:33.000", "1:31.000", "1:29.000", "1:27.000", "1:25.000"] },
+  "Hungaroring": { "GT3": ["1:48.105", "1:46.105", "1:44.105", "1:42.105", "1:40.105"] },
+  "Nurburgring Nordchleiffe": { "GT3": ["8:24.347", "8:22.347", "8:20.347", "8:18.347", "8:16.347"] }
 };
+
 const classes = [
   "unrealistic - please check your time entry",
   "require improvement - this time is too slow to classify",
@@ -97,24 +117,18 @@ function classify(track, carClass, lapTime) {
   if (!classificationData[track] || !classificationData[track][carClass]) return "No data for selected track/class";
 
   const rawThresholds = classificationData[track][carClass].map(timeToSeconds);
-  const alien = rawThresholds[rawThresholds.length - 1];
-  const unrealistic = alien * 0.95;
-  const pro = alien * 1.02 + 0.01;
-  const highAm = pro + 0.01;
-  const am = highAm + 0.01;
-  const beginner = am + 0.01;
-  const requireImprovement = beginner + 0.01;
-
-  const thresholds = [unrealistic, requireImprovement, beginner, am, highAm, pro, alien];
   const userTime = timeToSeconds(lapTime) / rainImpact;
 
+  if (isNaN(userTime)) return "Invalid time format";
+
+  const thresholds = rawThresholds;
+
   for (let i = 0; i < thresholds.length; i++) {
-    if (userTime <= thresholds[i]) return classes[i];
+    if (userTime >= thresholds[i]) return classes[i + 1]; // slower = lower class
   }
-  return "unrealistic - please check your time entry";
+  return classes[classes.length - 1]; // Alien
 }
 
-// ✅ Hook up form submission
 document.getElementById("classificationForm").addEventListener("submit", function (e) {
   e.preventDefault();
 
