--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0098
+    Beta 0.0.0099
   </div>
 
   <div class="mb-6">
@@ -139,8 +139,8 @@ function classify(track, carClass, lapTime) {
     if (userTime >= thresholds[i]) {
       classification = classes[i + 1] || classes[classes.length - 1];
 
-      const fasterGap = (i > 0) ? (userTime - thresholds[i - 1]).toFixed(3) : null;
-      const slowerGap = (i < thresholds.length - 1) ? (thresholds[i + 1] - userTime).toFixed(3) : null;
+      const fasterGap = Math.abs((i > 0) ? (userTime - thresholds[i - 1]).toFixed(3)) : null;
+      const slowerGap = Math.abs((i < thresholds.length - 1) ? (thresholds[i + 1] - userTime).toFixed(3)) : null;
 
       if (fasterGap !== null && slowerGap !== null) {
         gapInfo = `You are +${fasterGap}s slower than the faster category, and -${slowerGap}s faster than the slower category.`;
