--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0100
+    Beta 0.0.0101
   </div>
 
   <div class="mb-6">
@@ -182,10 +182,10 @@ document.getElementById("classificationForm").addEventListener("submit", functio
     body: JSON.stringify(entry),
     headers: { "Content-Type": "application/json" }
   })
-  .then(() => alert("✅ Entry submitted to Google Sheets."))
+  .then(() => alert("✅ successfully updated."))
   .catch(error => {
     console.error("❌ Failed to save entry:", error);
-    alert("❌ Failed to save to Google Sheets.");
+    alert("❌ Failed to save entry. check beta number and report via discord");
   });
 });
 
