--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0101
+    Beta 0.0.0102
   </div>
 
   <div class="mb-6">
@@ -140,18 +140,26 @@ function classify(track, carClass, lapTime) {
       classification = classes[i + 1] || classes[classes.length - 1];
 
       const fasterGap = (i > 0) ? Math.abs((userTime - thresholds[i - 1]).toFixed(3)) : null;
-      const slowerGap = (i < thresholds.length - 1) ? Math.abs( (thresholds[i + 1] - userTime).toFixed(3)) : null;
+      const slowerGap = (i < thresholds.length - 1) ? Math.abs((thresholds[i + 1] - userTime).toFixed(3)) : null;
 
       if (fasterGap !== null && slowerGap !== null) {
-        gapInfo = `You are +${fasterGap}s slower than the faster category, and -${slowerGap}s faster than the slower category.`;
+        gapInfo = `
+          You are <span class="bg-red-200 text-red-800 px-1 rounded">+${fasterGap}s slower</span> than the faster category, 
+          and <span class="bg-green-200 text-green-800 px-1 rounded">-${slowerGap}s faster</span> than the slower category.
+        `;
       } else if (fasterGap === null) {
-        gapInfo = `You are -${slowerGap}s faster than the next category.`;
+        gapInfo = `
+          You are <span class="bg-green-200 text-green-800 px-1 rounded">-${slowerGap}s faster</span> than the next category.
+        `;
       } else {
-        gapInfo = `You are +${fasterGap}s slower than the top category.`;
+        gapInfo = `
+          You are <span class="bg-red-200 text-red-800 px-1 rounded">+${fasterGap}s slower</span> than the top category.
+        `;
       }
       break;
     }
   }
+
   return { classification, gapInfo };
 }
 
