--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0106
+    Beta 0.0.0107
   </div>
 
   <div class="mb-6">
@@ -129,6 +129,8 @@ const tips = [
 function getRandomTip() {
   return tips[Math.floor(Math.random() * tips.length)];
 }
+
+const submissionLog = [];
 
 function timeToSeconds(timeStr) {
   const [min, sec] = timeStr.split(":");
