--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0107
+    Beta 0.0.0108
   </div>
 
   <div class="mb-6">
@@ -52,7 +52,7 @@
       <select id="carClass" class="w-full p-2 border rounded" required>
         <option value="">Select Car Class</option>
         <option value="GT3">GT3</option>
-        <option value="GT4">GT4</option>
+        <option value="GT4">GT4 coming soon</option>
       </select>
 
       <label for="weather" class="block text-left text-sm font-medium text-gray-700">Weather</label>
